[project]
name = "pydata-berlin-website"
version = "0.1.0"
description = "Scripts to generate the PyData Berlin conference website"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pyaml>=25.5.0",
    "requests>=2.32.4",
    "pillow>=11.3.0",
]
